syntax = "proto3";
option java_package = "com.wblog.proto";
option java_outer_classname = "DecrUserAboutProto";
import "google/protobuf/timestamp.proto";
 message decrUserAboutReq {
    string reqName = 1;
    string nickName = 2;
 }
 message decrUserAboutRes{
    int32 code = 1;
    string desc =2;
    int32 result = 3;
 }